# strava-analytics

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  activities.json  config.py  config.yml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
app/: Dockerfile  config.yml  docker_entrypoint.sh  requirements.txt
app/etl/: datahandler.py  dbconnection.py  get_activities.py  load_activities.py  main.py  models.py  process_activities.py  schemas.py
archive/: dockerfile
archive/backend/: api.py  methods.py
archive/dash/: app.py  app_archive.py  chart_archive.py  charts.py  config.yml
archive/scripts/: build.sh  run.sh
database/: Dockerfile
database/sql/: create_database.sql  create_dataset.sql  create_tables.sql
misc/dash/: navigation.py
misc/reports/: generate_report.py  reports.py
scripts/: build.sh  run.sh
src/: get_activities.py  process_activities.py
src/backend/: api.py  errors.py
src/dash/: app.py  charts.py
src/data/: processed_activities.csv
src/data/processed/: processed_activities_2024-08-03.csv
src/data/raw/: raw_activities_2024-07-30.csv  raw_activities_2024-08-03.csv
src/etl/: .creds  .env  get_activities.py  load_activities.py  process_activities.py  process_rollup.py
src/sql/: create_database.sql  load_data.sql
