[project]
name = "strava-analytics"
version = "0.1.0"
description = "ETL pipeline for Strava activity data with Postgres and Superset"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
