[project]
name = "strava-analytics"
version = "0.1.0"
description = "ETL pipeline for Strava activity data with Postgres and Superset"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
